[tool.poetry]
name = "promptedit"
version = "0.1.0"
description = "edit prompts for tao.studio"
authors = ["crypmario <mariosantossilva982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
accelerate = "^0.22.0"
bitsandbytes = "^0.41.1"
scipy = "^1.11.2"
transformers = "^4.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
